# forget-me-not

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  package_data.db  todo.md
src/: _models.rs  app.rs  cli.rs  config.rs  core.rs  db.rs  fmn.rs  fs.rs  main.rs  models.rs  path.rs  program.rs  todo.rs
src/app/: app_context.rs  app_result.rs  simple_app.rs
src/config/: config.rs  manager.rs
src/core/: cli.rs  data.rs  fio.rs  service.rs
src/database/: mod.rs  package_data.rs  sqlite.rs
src/deprecated/: _models.rs  cli.rs  main.rs  program.rs
src/simpledata/: data.rs  mod.rs  sqlite.rs
