[package]
name = "forget-me-not"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde", "now"] }
dirs = "6.0.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
which = "8.0.0"
